# PAZI_LW2

./: CMakeLists.txt  Doxyfile  main.cpp  test
Doxygen/html/: doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html
Doxygen/html/search/: all_1.js  all_3.js  all_7.js  all_8.js  defines_0.js  functions_1.js  functions_3.js  functions_5.js  searchdata.js
